  On DateTime.Property, use getDateTime().
  On DateMidnight.Property, use getDateMidnight().
  On MutableDateTime.Property, use getMutableDateTime().

- ReadableInstant
  - added method isSupported(DateTimeFieldType field)
  Implemented in DateTime/DateMidnight/MutableDateTime 

- YearMonthDay/TimeOfDay
  - removed getReadablePartial() from the property classes
  On YearMonthDay.Property, use getYearMonthDay().
  On TimeOfDay.Property, use getTimeOfDay().


Bug fixes since 0.98
--------------------

- Interval/MutableInterval isAfter(ReadableInterval) - fixed bug when intervals abutted

- Parsing periods of the form PT... - fixed bug that prevented parsing

- Period parsing now more strict - 'T' character required to separate date and
  time in ISO periods

- Fixed parsing of fractional seconds in Periods

- Default time zone based on offset was being interpreted as UTC

- Fixed NullPointerException in DateTimeFormat

- DateTimeFormat would use date style for time style

- DateTimeFormatterBuilder was using wrong time zone for text fields

- Avoid NPE in property(DateTimeFieldType) methods


Enhancements since 0.98
-----------------------

- YearMonthDay/TimeOfDay
  - add toString variants that take a pattern

- YearMonthDay/TimeOfDay
  - add withField(), withFieldAdded(), withPeriodAdded(), plus() and minus()

- DateTimeField
  - Add methods getAsText(int, Locale) and getAsShortText(int, Locale) for simple access to text values

- Period
  - Added support to create periods from a duration and an end instant

- Period
  - Periods can be converted to durations by end instant too

- Duration
  - Durations can be converted to periods by end instant too

- Duration
  - Durations can be converted to intervals by end instant too

- Formatting package
  - Restored formatting interfaces to provide same functionality as version 0.95


Feedback
--------

All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team